mac: Send window position to renderer

Send this message every time the window position changes. This was
accidentally removed during refactoring to support cross-process
views.

Bug: 848548
Change-Id: Ide7fd5a82304dbc25b612bd1371c6cda9fa678fe
Reviewed-on: https://chromium-review.googlesource.com/1085999
Reviewed-by: Leonard Grey <lgrey@chromium.org>
Commit-Queue: ccameron <ccameron@chromium.org>
Cr-Commit-Position: refs/heads/master@{#564266}
Former-commit-id: c2e1e82b2d9e8e318231d65adb5acf58b020031b